Update lambda to support telegram credentials

--- a/function/lurk.yaml
+++ b/function/lurk.yaml
@@ -1,47 +1,13 @@
 search:
-  nvidia-5080:
-    query: "nvidia 5080"
+  nvidia-4070-ti:
+    query: "nvidia 4070"
     filters:
       min-price: 500
       max-price: 1500
       zip-code: M6K 1Y5
-    notify: availability # can also be 'deal'. 'availability' by default
-  nvidia-5090:
-    query: "nvidia 5090"
-    filters:
-      min-price: 500
-      max-price: 1500
-      zip-code: M6K 1Y5
-
-# will run all checkers by default
-checkers:
-  best-buy:
-    search:
-      # to disable this search for this specific vendor
-      nvidia-5080: # this should match the pre-existing search
-        enabled: false
-      nvidia-5090:
-        filters:
-          # these are vendor-specific, so we don't want them in global search
-          # everything else is inherited from global search
-          categories:
-            - "Computers & Tablets"
-            - "PC Components"
-          stores:
-            - 123
-            - 456
-            - 789
-          # we can also override stuff in global search
-          min-price: 800
-      # to run a search just for this vendor
-      another-search:
-        query: "foo"
-        filters:
-          min-price: 123
-        notify: deal
-  # to not run a specific checker:
-  amazon:
-    enabled: false
+      categories:
+        - "Computers & Tablets"
+        - "PC Components"
 
 client:
   headers:
